--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -15,44 +15,40 @@
       </font>
     </Label>
     <Label layoutX="87.0" layoutY="317.0" text="Valeur (€)" />
-    <TextField fx:id="prix" layoutX="188.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
     <Button fx:id="btnEditDelete" layoutX="341.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des équipements" />
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
+    <ComboBox fx:id="typeEquipement" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList" />
+      </items>
+    </ComboBox>
+    <TextField fx:id="calife" layoutX="188.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="marque" layoutX="188.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="prix" layoutX="188.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="modele" layoutX="188.0" layoutY="367.0" prefHeight="31.0" prefWidth="200.0" />
+    <ComboBox fx:id="numCPAgent" layoutX="187.0" layoutY="427.0" prefWidth="200.0">
+      <items>
+        <FXCollections fx:factory="observableArrayList" />
+      </items>
+    </ComboBox>
+    <DatePicker fx:id="dateLivraison" layoutX="637.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
+    <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextArea fx:id="info" layoutX="637.0" layoutY="312.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
+    <CheckBox fx:id="logicielsOuiNon" layoutX="185.0" layoutY="513.0" mnemonicParsing="false" text="Logiciels associés" />
     <AnchorPane fx:id="sectionLogiciel" layoutX="29.0" layoutY="543.0" prefHeight="152.0" prefWidth="824.0">
       <children>
         <ListView fx:id="lstLogiciel" layoutX="158.0" layoutY="14.0" prefHeight="108.0" prefWidth="200.0" />
-        <Button fx:id="btnSelectLogiciels" layoutX="367.0" layoutY="14.0" mnemonicParsing="false" onAction="#selectionLogiciels" prefHeight="31.0" prefWidth="138.0" text="Sélection logiciels" />
         <Label layoutX="37.0" layoutY="24.0" text="Logiciels" />
-        <Button layoutX="512.0" layoutY="14.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="+" />
       </children>
     </AnchorPane>
-    <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="711.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
+    <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
     <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement" />
-    <ComboBox fx:id="typeEquipement" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0">
-    	<items>
-        <FXCollections fx:factory="observableArrayList">
-        </FXCollections>
-      </items>
-    </ComboBox>
     <Label layoutX="75.0" layoutY="428.0" text="N° CP Agent" />
-    <CheckBox fx:id="logicielsOuiNon" layoutX="185.0" layoutY="513.0" mnemonicParsing="false" text="Logiciels associés" />
     <Label layoutX="78.0" layoutY="201.0" text="Nom Calife" />
-    <TextField fx:id="calife" layoutX="188.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="87.0" layoutY="252.0" text="Marque" />
-    <TextField fx:id="marque" layoutX="188.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="90.0" layoutY="372.0" text="Modèle" />
-    <TextField fx:id="modele" layoutX="188.0" layoutY="367.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="495.0" layoutY="252.0" text="Date fin garantie" />
-    <TextArea fx:id="info" layoutX="637.0" layoutY="312.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
-    <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="486.0" layoutY="317.0" text="Autres informations" />
     <Label layoutX="506.0" layoutY="201.0" text="Date livraison" />
-    <DatePicker fx:id="dateLivraison" layoutX="637.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
-    <ComboBox fx:id="numCPAgent" layoutX="187.0" layoutY="427.0" prefWidth="200.0">
-      <items>
-        <FXCollections fx:factory="observableArrayList">
-        </FXCollections>
-      </items>
-    </ComboBox>
   </children>
 </AnchorPane>
