--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -16,7 +16,7 @@
         <TableColumn prefWidth="75.0" text="Valeur (€)" fx:id="columnPrix" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="Date de Grantie" fx:id="columnDateGarantie" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" fx:id="columnAgent" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Modifier" fx:id="columnModifier" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Info" fx:id="columnModifier" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" fx:id="columnSupprimer" />
       </columns>
     </TableView>
