--- a/src/view/InformationEquipementPopup.fxml
+++ b/src/view/InformationEquipementPopup.fxml
@@ -15,14 +15,14 @@
     <Label layoutX="53.0" layoutY="57.0" text="Type:" />
     <Label layoutX="53.0" layoutY="73.0" text="Marque:" />
     <Label layoutX="53.0" layoutY="89.0" text="Modèle:" />
-    <Label layoutX="42.0" layoutY="132.0" text="Agent" />
+    <Label layoutX="42.0" layoutY="157.0" text="Agent" />
     <Label layoutX="42.0" layoutY="37.0" text="Equipement" />
-    <Label layoutX="53.0" layoutY="151.0" text="Nom:" />
-    <Label layoutX="53.0" layoutY="167.0" text="Prénom:" />
-    <Label layoutX="53.0" layoutY="183.0" text="N° CP:" />
+    <Label layoutX="53.0" layoutY="176.0" text="Nom:" />
+    <Label layoutX="53.0" layoutY="192.0" text="Prénom:" />
+    <Label layoutX="53.0" layoutY="208.0" text="N° CP:" />
     <Label layoutX="53.0" layoutY="105.0" text="Nom Calife:" />
-    <Label layoutX="42.0" layoutY="216.0" text="Logiciels installés:" />
-    <ListView fx:id="logiciels" layoutX="53.0" layoutY="238.0" prefHeight="170.0" prefWidth="299.0" />
+    <Label layoutX="42.0" layoutY="238.0" text="Logiciels installés:" />
+    <ListView fx:id="logiciels" layoutX="53.0" layoutY="265.0" prefHeight="143.0" prefWidth="299.0" />
     <Label fx:id="type" layoutX="93.0" layoutY="57.0" prefWidth="259.0" text="-">
       <font>
         <Font name="System Bold" size="13.0" fx:id="x1" />
@@ -31,10 +31,12 @@
     <Label fx:id="marque" font="$x1" layoutX="106.0" layoutY="73.0" prefWidth="246.0" text="-" />
     <Label fx:id="modele" font="$x1" layoutX="106.0" layoutY="89.0" prefWidth="246.0" text="-" />
     <Label fx:id="calife" font="$x1" layoutX="127.0" layoutY="105.0" prefWidth="225.0" text="-" />
-    <Label fx:id="nom" font="$x1" layoutX="87.0" layoutY="151.0" prefWidth="265.0" text="-" />
-    <Label fx:id="prenom" font="$x1" layoutX="106.0" layoutY="167.0" prefWidth="246.00009999999747" text="-" />
-    <Label fx:id="cp" font="$x1" layoutX="93.0" layoutY="183.0" prefWidth="259.0" text="-" />
-    <Label layoutX="223.0" layoutY="37.0" text="Autres Informations:" />
-    <TextArea fx:id="info" editable="false" layoutX="222.0" layoutY="60.0" prefHeight="156.0" prefWidth="130.0" wrapText="true" />
+    <Label fx:id="nom" font="$x1" layoutX="87.0" layoutY="176.0" prefWidth="265.0" text="-" />
+    <Label fx:id="prenom" font="$x1" layoutX="106.0" layoutY="192.0" prefWidth="246.00009999999747" text="-" />
+    <Label fx:id="cp" font="$x1" layoutX="93.0" layoutY="208.0" prefWidth="258.9999000000025" text="-" />
+    <Label layoutX="224.0" layoutY="40.0" text="Autres Informations:" />
+    <TextArea fx:id="info" editable="false" layoutX="223.0" layoutY="63.0" prefHeight="156.0" prefWidth="130.0" wrapText="true" />
+    <Label layoutX="53.0" layoutY="122.0" text="Date livraison:" />
+    <Label id="calife" fx:id="dateLivraison" font="$x1" layoutX="144.0" layoutY="122.0" prefWidth="225.0" text="-" />
   </children>
 </AnchorPane>
