--- a/src/view/AjoutLogiciel.fxml
+++ b/src/view/AjoutLogiciel.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutLogiciel">
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutLogiciel">
   <children>
     <Label layoutX="339.0" layoutY="85.0" text="Ajouter un nouveau logiciel">
       <font>
@@ -21,11 +21,13 @@
     <Label layoutX="243.0" layoutY="223.0" text="Libelle" />
     <Label layoutX="203.0" layoutY="274.0" text="Numéro de la licence" />
     <Label layoutX="208.0" layoutY="328.0" text="Prix de la licence (€)" />
-    <Button layoutX="416.0" layoutY="372.0" mnemonicParsing="false" onAction="#enregistrerLogiciel" text="Ajouter" />
-    <Label fx:id="msgAjoutOk" layoutX="217.0" layoutY="424.0" prefHeight="23.0" prefWidth="453.0" text="Nouveau logiciel ajouté avec succès !" textFill="#0db915" visible="false">
-      <font>
-        <Font name="System Bold" size="15.0" />
-      </font>
-    </Label>
+    <Button layoutX="398.0" layoutY="540.0" mnemonicParsing="false" onAction="#enregistrerLogiciel" text="Ajouter" />
+      <DatePicker fx:id="dateFinValidite" layoutX="349.0" layoutY="385.0" prefHeight="31.0" prefWidth="200.0" />
+      <Label fx:id="msgAjoutOk" layoutX="296.0" layoutY="484.0" prefHeight="23.0" prefWidth="310.0" text="Nouveau logiciel ajouté avec succès !" textFill="#0db915" visible="false">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="154.0" layoutY="390.0" text="Fin de validité de la licence" />
   </children>
 </AnchorPane>
