--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -34,6 +34,8 @@
       <children>
         <ListView fx:id="lstLogiciel" layoutX="158.0" layoutY="14.0" prefHeight="108.0" prefWidth="200.0" />
         <Label layoutX="37.0" layoutY="24.0" text="Logiciels" />
+            <Button layoutX="368.0" layoutY="19.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
+            <Button layoutX="368.0" layoutY="53.0" mnemonicParsing="false" text="Nouveau" />
       </children>
     </AnchorPane>
     <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
