--- a/src/view/AjoutAgent.fxml
+++ b/src/view/AjoutAgent.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutAgent">
+<AnchorPane fx:id="bodyPanel" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutAgent">
   <children>
     <Label layoutX="344.0" layoutY="85.0" text="Ajouter un nouvel agent">
       <font>
@@ -24,11 +24,6 @@
     <Label layoutX="235.0" layoutY="380.0" text="Pôle / Service" />
     <Label layoutX="260.0" layoutY="433.0" text="N° CP" />
     <Button layoutX="422.0" layoutY="547.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
-    <Label fx:id="msgAjoutOk" layoutX="268.0" layoutY="501.0" prefHeight="22.0" prefWidth="372.0" text="Nouvel agent ajouté avec succès !" textAlignment="CENTER" textFill="#0db915" visible="false">
-      <font>
-        <Font name="System Bold" size="15.0" />
-      </font>
-    </Label>
     <ComboBox fx:id="pole" layoutX="351.0" layoutY="378.0" prefWidth="200.0">
       <items>
         <FXCollections fx:factory="observableArrayList" />
