--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -29,15 +29,6 @@
     <DatePicker fx:id="dateLivraison" layoutX="637.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
     <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
     <TextArea fx:id="info" layoutX="637.0" layoutY="312.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
-    <CheckBox fx:id="logicielsOuiNon" layoutX="185.0" layoutY="513.0" mnemonicParsing="false" text="Logiciels associés" />
-    <AnchorPane fx:id="sectionLogiciel" layoutX="29.0" layoutY="543.0" prefHeight="152.0" prefWidth="824.0">
-      <children>
-        <ListView fx:id="lstLogiciel" layoutX="158.0" layoutY="14.0" prefHeight="108.0" prefWidth="200.0" />
-        <Label layoutX="37.0" layoutY="24.0" text="Logiciels" />
-            <Button layoutX="368.0" layoutY="19.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
-            <Button layoutX="368.0" layoutY="53.0" mnemonicParsing="false" text="Nouveau" />
-      </children>
-    </AnchorPane>
     <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
     <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement" />
     <Label layoutX="75.0" layoutY="428.0" text="N° CP Agent" />
@@ -48,7 +39,12 @@
     <Label layoutX="486.0" layoutY="317.0" text="Autres informations" />
     <Label layoutX="506.0" layoutY="201.0" text="Date livraison" />
       <TextField fx:id="numCPAgent" editable="false" layoutX="188.0" layoutY="423.0" prefHeight="31.0" prefWidth="200.0" />
-      <Button layoutX="395.0" layoutY="454.0" mnemonicParsing="false" onAction="#ajoutAgent" text="Nouveau" />
+      <Button layoutX="396.0" layoutY="454.0" mnemonicParsing="false" onAction="#ajoutAgent" text="Nouveau" />
       <Button layoutX="395.0" layoutY="423.0" mnemonicParsing="false" onAction="#selectAgent" text="Selection" />
+      <ListView fx:id="lstLogiciel" layoutX="185.0" layoutY="537.0" prefHeight="108.0" prefWidth="200.0" />
+      <Label layoutX="64.0" layoutY="547.0" text="Logiciels" />
+      <Button layoutX="395.0" layoutY="542.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
+      <Button layoutX="396.0" layoutY="576.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="Nouveau" />
+      <Button layoutX="637.0" layoutY="128.0" mnemonicParsing="false" text="Nouveau" />
   </children>
 </AnchorPane>
