--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -6,18 +6,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="750.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionEquipement">
+<AnchorPane fx:id="bodyPanel" prefHeight="750.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GestionEquipement">
   <children>
-    <Button layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddEquipment" prefHeight="21.0" prefWidth="181.0" text="Ajouter des équipements" />
+    <Button layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddEquipment" prefHeight="31.0" prefWidth="197.0" text="Ajouter des équipements" />
     <TableView fx:id="tableViewEquipement" layoutX="29.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="492.0" prefWidth="842.0">
       <columns>
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Nom Calife" fx:id="columnCalife" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Type" fx:id="columnType" />
-        <TableColumn prefWidth="75.0" text="Valeur (€)" fx:id="columnPrix" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="Date de Grantie" fx:id="columnDateGarantie" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" fx:id="columnAgent" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Info" fx:id="columnModifier" />
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" fx:id="columnSupprimer" />
+        <TableColumn fx:id="columnCalife" maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Nom Calife" />
+        <TableColumn fx:id="columnType" maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Type" />
+        <TableColumn fx:id="columnPrix" prefWidth="75.0" text="Valeur (€)" />
+        <TableColumn fx:id="columnDateGarantie" maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="Date de Grantie" />
+        <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" />
+        <TableColumn fx:id="columnModifier" maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Info" />
+        <TableColumn fx:id="columnSupprimer" maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" />
       </columns>
     </TableView>
     <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
