--- a/src/view/GraphNbEquipementPole.fxml
+++ b/src/view/GraphNbEquipementPole.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="723.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphNbEquipementType">
+<AnchorPane prefHeight="723.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphNbEquipementPole">
   <children>
     <StackedBarChart fx:id="SBchart" layoutX="136.0" layoutY="157.0" prefHeight="525.0" prefWidth="604.0">
       <xAxis>
@@ -18,7 +18,7 @@
         <NumberAxis side="LEFT" />
       </yAxis>
     </StackedBarChart>
-    <Label layoutX="314.0" layoutY="107.0" text="Nombre d'équipement par type">
+    <Label layoutX="314.0" layoutY="107.0" text="Nombre d'équipement par pôle">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
