--- a/src/view/GraphNbEquipementType.fxml
+++ b/src/view/GraphNbEquipementType.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="723.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphNbEquipementType">
+<AnchorPane fx:id="bodyPanel" prefHeight="723.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphNbEquipementType">
   <children>
     <StackedBarChart fx:id="SBchart" layoutX="136.0" layoutY="157.0" prefHeight="525.0" prefWidth="604.0">
       <xAxis>
@@ -23,5 +23,6 @@
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
+    <Button layoutX="400.0" layoutY="700.0" mnemonicParsing="false" onAction="#exportGraph" text="Exporter" />
   </children>
 </AnchorPane>
