--- a/src/view/AjoutLogicielPopup.fxml
+++ b/src/view/AjoutLogicielPopup.fxml
@@ -13,7 +13,7 @@
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <TextField fx:id="libelle" layoutX="296.0" layoutY="219.0" prefWidth="200.0" />
+    <TextField fx:id="nom" layoutX="296.0" layoutY="219.0" prefWidth="200.0" />
     <TextField fx:id="licenceNumber" layoutX="296.0" layoutY="270.0" prefWidth="200.0" />
     <TextField fx:id="prix" layoutX="296.0" layoutY="324.0" prefWidth="200.0" />
     <Label layoutX="188.0" layoutY="222.0" text="Libelle" />
